--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react-notifications-component": "^1.1.1",
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1",
+    "react-scripts": "^3.3.0",
     "redux": "^4.0.1",
     "semantic-ui-react": "^0.87.1"
   },
